<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Aboutus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/layout_about_app"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lineSpacingExtra="5dp"
            android:maxLines="100"
            android:padding="2dp"
            android:text="@string/aboutourapp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/our_story"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lineSpacingExtra="5dp"
            android:maxLines="100"
            android:padding="2dp"
            android:text="@string/ourstory"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/contribute_us"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/ashishUPI"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textIsSelectable="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/ShubhamUPI"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textIsSelectable="true"
          />
    </LinearLayout>
</ScrollView>