<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Addbooks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/ic_action_addimage"
            android:id="@+id/imgaddbookset"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/layout_bookset_image" />

        <TextView
            android:id="@+id/selectimagebookset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_click_to_select_bookset_collage_image"
            android:textAlignment="center"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/depttextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/department"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinner_list_setdept"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/depttextyear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/book_year"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinner_list_setyear"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke"
                android:padding="5dp"
                android:spinnerMode="dropdown" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/semtextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/layout_semister"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinner_list_setsem"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke"
                android:padding="5dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/layout_atleast_add_3_books"
            android:textAlignment="center"
            android:textColor="@color/hintcolorgrey" />

        <EditText
            android:id="@+id/setedtbookname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_addbook"
            android:hint="@string/lauout_book_name1"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookpublication1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_home"
            android:hint="@string/layout_publication_of_book_1"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_addbook"
            android:hint="@string/lauout_book_name2"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookpublication2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_home"
            android:hint="@string/layout_publication_of_book_2"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookname3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_addbook"
            android:hint="@string/lauout_book_name3"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookpublication3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_home"
            android:hint="@string/layout_publication_of_book_3"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookname4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_addbook"
            android:hint="@string/lauout_book_name4"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookpublication4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_home"
            android:hint="@string/layout_publication_of_book_4"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookname5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_addbook"
            android:hint="@string/lauout_book_name5"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/setedtbookpublication5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/stroke"
            android:drawableStart="@drawable/ic_action_home"
            android:hint="@string/layout_publication_of_book_5"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:text="@string/noteforcontact"
            android:textColor="@color/hintcolorgrey"
            android:textSize="14sp"
            android:visibility="visible"
            app:drawableStartCompat="@drawable/ic_action_error" />

        <Button
            android:id="@+id/btnaddbookset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/lgbtnback"
            android:padding="10dp"
            android:text="@string/layout_btnadd_bookset"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/addbookprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>


</ScrollView>